--- a/notebooks/1-data-collection.ipynb
+++ b/notebooks/1-data-collection.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        ]
       },
       "text/html": [
-       "<table><tr><th>Software</th><th>Version</th></tr><tr><td>Python</td><td>3.7.3 64bit [MSC v.1900 64 bit (AMD64)]</td></tr><tr><td>IPython</td><td>7.5.0</td></tr><tr><td>OS</td><td>Windows 10 10.0.17763 SP0</td></tr><tr><td>numpy</td><td>1.16.3</td></tr><tr><td>pandas</td><td>0.24.2</td></tr><tr><td colspan='2'>Wed May 29 10:44:08 2019 GMT Summer Time</td></tr></table>"
+       "<table><tr><th>Software</th><th>Version</th></tr><tr><td>Python</td><td>3.7.3 64bit [MSC v.1900 64 bit (AMD64)]</td></tr><tr><td>IPython</td><td>7.5.0</td></tr><tr><td>OS</td><td>Windows 10 10.0.17763 SP0</td></tr><tr><td>numpy</td><td>1.16.3</td></tr><tr><td>pandas</td><td>0.24.2</td></tr><tr><td colspan='2'>Thu May 30 12:21:17 2019 GMT Summer Time</td></tr></table>"
       ],
       "text/latex": [
        "\\begin{tabular}{|l|l|}\\hline\n",
@@ -51,7 +51,7 @@
        "OS & Windows 10 10.0.17763 SP0 \\\\ \\hline\n",
        "numpy & 1.16.3 \\\\ \\hline\n",
        "pandas & 0.24.2 \\\\ \\hline\n",
-       "\\hline \\multicolumn{2}{|l|}{Wed May 29 10:44:08 2019 GMT Summer Time} \\\\ \\hline\n",
+       "\\hline \\multicolumn{2}{|l|}{Thu May 30 12:21:17 2019 GMT Summer Time} \\\\ \\hline\n",
        "\\end{tabular}\n"
       ],
       "text/plain": [
@@ -61,10 +61,10 @@
        "OS Windows 10 10.0.17763 SP0\n",
        "numpy 1.16.3\n",
        "pandas 0.24.2\n",
-       "Wed May 29 10:44:08 2019 GMT Summer Time"
+       "Thu May 30 12:21:17 2019 GMT Summer Time"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -332,7 +332,7 @@
        "4     50  Half-Life: Opposing Force"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -722,7 +722,7 @@
        "      <td>[{'id': '1', 'description': 'Action'}]</td>\n",
        "      <td>[{'id': 0, 'path_thumbnail': 'https://steamcdn...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>{'total': 66228}</td>\n",
+       "      <td>{'total': 66232}</td>\n",
        "      <td>{'total': 0}</td>\n",
        "      <td>{'coming_soon': False, 'date': '1 Nov, 2000'}</td>\n",
        "      <td>{'url': 'http://steamcommunity.com/app/10', 'e...</td>\n",
@@ -764,7 +764,7 @@
        "      <td>[{'id': '1', 'description': 'Action'}]</td>\n",
        "      <td>[{'id': 0, 'path_thumbnail': 'https://steamcdn...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>{'total': 2817}</td>\n",
+       "      <td>{'total': 2816}</td>\n",
        "      <td>{'total': 0}</td>\n",
        "      <td>{'coming_soon': False, 'date': '1 Apr, 1999'}</td>\n",
        "      <td>{'url': '', 'email': ''}</td>\n",
@@ -806,7 +806,7 @@
        "      <td>[{'id': '1', 'description': 'Action'}]</td>\n",
        "      <td>[{'id': 0, 'path_thumbnail': 'https://steamcdn...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>{'total': 2012}</td>\n",
+       "      <td>{'total': 2013}</td>\n",
        "      <td>{'total': 0}</td>\n",
        "      <td>{'coming_soon': False, 'date': '1 May, 2003'}</td>\n",
        "      <td>{'url': '', 'email': ''}</td>\n",
@@ -890,7 +890,7 @@
        "      <td>[{'id': '1', 'description': 'Action'}]</td>\n",
        "      <td>[{'id': 0, 'path_thumbnail': 'https://steamcdn...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>{'total': 4401}</td>\n",
+       "      <td>{'total': 4402}</td>\n",
        "      <td>{'total': 0}</td>\n",
        "      <td>{'coming_soon': False, 'date': '1 Nov, 1999'}</td>\n",
        "      <td>{'url': 'https://help.steampowered.com', 'emai...</td>\n",
@@ -1022,11 +1022,11 @@
        "4  [{'id': '1', 'description': 'Action'}]   \n",
        "\n",
        "                                         screenshots movies   recommendations  \\\n",
-       "0  [{'id': 0, 'path_thumbnail': 'https://steamcdn...    NaN  {'total': 66228}   \n",
-       "1  [{'id': 0, 'path_thumbnail': 'https://steamcdn...    NaN   {'total': 2817}   \n",
-       "2  [{'id': 0, 'path_thumbnail': 'https://steamcdn...    NaN   {'total': 2012}   \n",
+       "0  [{'id': 0, 'path_thumbnail': 'https://steamcdn...    NaN  {'total': 66232}   \n",
+       "1  [{'id': 0, 'path_thumbnail': 'https://steamcdn...    NaN   {'total': 2816}   \n",
+       "2  [{'id': 0, 'path_thumbnail': 'https://steamcdn...    NaN   {'total': 2013}   \n",
        "3  [{'id': 0, 'path_thumbnail': 'https://steamcdn...    NaN    {'total': 942}   \n",
-       "4  [{'id': 0, 'path_thumbnail': 'https://steamcdn...    NaN   {'total': 4401}   \n",
+       "4  [{'id': 0, 'path_thumbnail': 'https://steamcdn...    NaN   {'total': 4402}   \n",
        "\n",
        "   achievements                                   release_date  \\\n",
        "0  {'total': 0}  {'coming_soon': False, 'date': '1 Nov, 2000'}   \n",
@@ -1057,7 +1057,7 @@
        "4                         {'ids': [], 'notes': None}  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1089,9 +1089,9 @@
      "text": [
       "Starting at index 0:\n",
       "\n",
-      "Exported lines 0-4 to steamspy_data.csv. Batch 0 time: 0:00:04 (avg: 0:00:04, remaining: 0:00:13)\n",
-      "Exported lines 5-9 to steamspy_data.csv. Batch 1 time: 0:00:04 (avg: 0:00:04, remaining: 0:00:08)\n",
-      "Exported lines 10-14 to steamspy_data.csv. Batch 2 time: 0:00:05 (avg: 0:00:04, remaining: 0:00:04)\n",
+      "Exported lines 0-4 to steamspy_data.csv. Batch 0 time: 0:00:04 (avg: 0:00:04, remaining: 0:00:11)\n",
+      "Exported lines 5-9 to steamspy_data.csv. Batch 1 time: 0:00:04 (avg: 0:00:04, remaining: 0:00:07)\n",
+      "Exported lines 10-14 to steamspy_data.csv. Batch 2 time: 0:00:04 (avg: 0:00:04, remaining: 0:00:04)\n",
       "Exported lines 15-19 to steamspy_data.csv. Batch 3 time: 0:00:04 (avg: 0:00:04, remaining: 0:00:00)\n",
       "\n",
       "Processing batches complete. 20 apps written\n"
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1192,21 +1192,21 @@
        "      <td>Valve</td>\n",
        "      <td>Valve</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>124829</td>\n",
-       "      <td>3352</td>\n",
+       "      <td>125219</td>\n",
+       "      <td>3366</td>\n",
        "      <td>0</td>\n",
-       "      <td>10,000,000 .. 20,000,000</td>\n",
-       "      <td>9582</td>\n",
-       "      <td>508</td>\n",
-       "      <td>206</td>\n",
-       "      <td>669</td>\n",
+       "      <td>20,000,000 .. 50,000,000</td>\n",
+       "      <td>11760</td>\n",
+       "      <td>1</td>\n",
+       "      <td>435</td>\n",
+       "      <td>1</td>\n",
        "      <td>999</td>\n",
        "      <td>999</td>\n",
        "      <td>0</td>\n",
        "      <td>English, French, German, Italian, Spanish - Sp...</td>\n",
        "      <td>Action</td>\n",
-       "      <td>14984</td>\n",
-       "      <td>{'Action': 2682, 'FPS': 2049, 'Multiplayer': 1...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{'Action': 5247, 'FPS': 4638, 'Multiplayer': 3...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1215,21 +1215,21 @@
        "      <td>Valve</td>\n",
        "      <td>Valve</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>3325</td>\n",
-       "      <td>637</td>\n",
+       "      <td>3337</td>\n",
+       "      <td>634</td>\n",
        "      <td>0</td>\n",
-       "      <td>5,000,000 .. 10,000,000</td>\n",
-       "      <td>268</td>\n",
+       "      <td>2,000,000 .. 5,000,000</td>\n",
+       "      <td>19</td>\n",
        "      <td>0</td>\n",
-       "      <td>356</td>\n",
+       "      <td>25</td>\n",
        "      <td>0</td>\n",
        "      <td>499</td>\n",
        "      <td>499</td>\n",
        "      <td>0</td>\n",
        "      <td>English, French, German, Italian, Spanish - Sp...</td>\n",
        "      <td>Action</td>\n",
-       "      <td>77</td>\n",
-       "      <td>[]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{'Action': 721, 'FPS': 289, 'Multiplayer': 241...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1238,21 +1238,21 @@
        "      <td>Valve</td>\n",
        "      <td>Valve</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>3427</td>\n",
-       "      <td>403</td>\n",
+       "      <td>3451</td>\n",
+       "      <td>405</td>\n",
        "      <td>0</td>\n",
        "      <td>5,000,000 .. 10,000,000</td>\n",
-       "      <td>90</td>\n",
+       "      <td>15</td>\n",
        "      <td>0</td>\n",
-       "      <td>6</td>\n",
+       "      <td>9</td>\n",
        "      <td>0</td>\n",
        "      <td>499</td>\n",
        "      <td>499</td>\n",
        "      <td>0</td>\n",
        "      <td>English, French, German, Italian, Spanish - Spain</td>\n",
        "      <td>Action</td>\n",
-       "      <td>124</td>\n",
-       "      <td>{'FPS': 139, 'World War II': 123, 'Multiplayer...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{'FPS': 769, 'World War II': 237, 'Multiplayer...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1261,21 +1261,21 @@
        "      <td>Valve</td>\n",
        "      <td>Valve</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1281</td>\n",
-       "      <td>271</td>\n",
+       "      <td>1288</td>\n",
+       "      <td>270</td>\n",
        "      <td>0</td>\n",
        "      <td>5,000,000 .. 10,000,000</td>\n",
-       "      <td>24</td>\n",
+       "      <td>9</td>\n",
        "      <td>0</td>\n",
-       "      <td>34</td>\n",
+       "      <td>12</td>\n",
        "      <td>0</td>\n",
        "      <td>499</td>\n",
        "      <td>499</td>\n",
        "      <td>0</td>\n",
        "      <td>English, French, German, Italian, Spanish - Sp...</td>\n",
        "      <td>Action</td>\n",
-       "      <td>10</td>\n",
-       "      <td>{'Action': 85, 'FPS': 72, 'Multiplayer': 59, '...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{'Action': 620, 'FPS': 132, 'Classic': 99, 'Mu...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1284,21 +1284,21 @@
        "      <td>Gearbox Software</td>\n",
        "      <td>Valve</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>5272</td>\n",
-       "      <td>291</td>\n",
+       "      <td>5296</td>\n",
+       "      <td>295</td>\n",
        "      <td>0</td>\n",
        "      <td>5,000,000 .. 10,000,000</td>\n",
-       "      <td>215</td>\n",
+       "      <td>381</td>\n",
        "      <td>0</td>\n",
-       "      <td>182</td>\n",
+       "      <td>389</td>\n",
        "      <td>0</td>\n",
        "      <td>499</td>\n",
        "      <td>499</td>\n",
        "      <td>0</td>\n",
        "      <td>English, French, German, Korean</td>\n",
        "      <td>Action</td>\n",
-       "      <td>58</td>\n",
-       "      <td>{'FPS': 236, 'Action': 211, 'Sci-fi': 166, 'Si...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{'FPS': 853, 'Action': 278, 'Classic': 227, 'S...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1313,35 +1313,35 @@
        "4     50  Half-Life: Opposing Force  Gearbox Software     Valve         NaN   \n",
        "\n",
        "   positive  negative  userscore                    owners  average_forever  \\\n",
-       "0    124829      3352          0  10,000,000 .. 20,000,000             9582   \n",
-       "1      3325       637          0   5,000,000 .. 10,000,000              268   \n",
-       "2      3427       403          0   5,000,000 .. 10,000,000               90   \n",
-       "3      1281       271          0   5,000,000 .. 10,000,000               24   \n",
-       "4      5272       291          0   5,000,000 .. 10,000,000              215   \n",
+       "0    125219      3366          0  20,000,000 .. 50,000,000            11760   \n",
+       "1      3337       634          0    2,000,000 .. 5,000,000               19   \n",
+       "2      3451       405          0   5,000,000 .. 10,000,000               15   \n",
+       "3      1288       270          0   5,000,000 .. 10,000,000                9   \n",
+       "4      5296       295          0   5,000,000 .. 10,000,000              381   \n",
        "\n",
        "   average_2weeks  median_forever  median_2weeks  price  initialprice  \\\n",
-       "0             508             206            669    999           999   \n",
-       "1               0             356              0    499           499   \n",
-       "2               0               6              0    499           499   \n",
-       "3               0              34              0    499           499   \n",
-       "4               0             182              0    499           499   \n",
+       "0               1             435              1    999           999   \n",
+       "1               0              25              0    499           499   \n",
+       "2               0               9              0    499           499   \n",
+       "3               0              12              0    499           499   \n",
+       "4               0             389              0    499           499   \n",
        "\n",
-       "   discount                                          languages   genre    ccu  \\\n",
-       "0         0  English, French, German, Italian, Spanish - Sp...  Action  14984   \n",
-       "1         0  English, French, German, Italian, Spanish - Sp...  Action     77   \n",
-       "2         0  English, French, German, Italian, Spanish - Spain  Action    124   \n",
-       "3         0  English, French, German, Italian, Spanish - Sp...  Action     10   \n",
-       "4         0                    English, French, German, Korean  Action     58   \n",
+       "   discount                                          languages   genre  ccu  \\\n",
+       "0         0  English, French, German, Italian, Spanish - Sp...  Action    0   \n",
+       "1         0  English, French, German, Italian, Spanish - Sp...  Action    0   \n",
+       "2         0  English, French, German, Italian, Spanish - Spain  Action    0   \n",
+       "3         0  English, French, German, Italian, Spanish - Sp...  Action    0   \n",
+       "4         0                    English, French, German, Korean  Action    0   \n",
        "\n",
        "                                                tags  \n",
-       "0  {'Action': 2682, 'FPS': 2049, 'Multiplayer': 1...  \n",
-       "1                                                 []  \n",
-       "2  {'FPS': 139, 'World War II': 123, 'Multiplayer...  \n",
-       "3  {'Action': 85, 'FPS': 72, 'Multiplayer': 59, '...  \n",
-       "4  {'FPS': 236, 'Action': 211, 'Sci-fi': 166, 'Si...  "
+       "0  {'Action': 5247, 'FPS': 4638, 'Multiplayer': 3...  \n",
+       "1  {'Action': 721, 'FPS': 289, 'Multiplayer': 241...  \n",
+       "2  {'FPS': 769, 'World War II': 237, 'Multiplayer...  \n",
+       "3  {'Action': 620, 'FPS': 132, 'Classic': 99, 'Mu...  \n",
+       "4  {'FPS': 853, 'Action': 278, 'Classic': 227, 'S...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
