--- a/notebooks/2-data-cleaning-part-1.ipynb
+++ b/notebooks/2-data-cleaning-part-1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        ]
       },
       "text/html": [
-       "<table><tr><th>Software</th><th>Version</th></tr><tr><td>Python</td><td>3.7.3 64bit [MSC v.1900 64 bit (AMD64)]</td></tr><tr><td>IPython</td><td>7.5.0</td></tr><tr><td>OS</td><td>Windows 10 10.0.17763 SP0</td></tr><tr><td>numpy</td><td>1.16.3</td></tr><tr><td>pandas</td><td>0.24.2</td></tr><tr><td colspan='2'>Thu May 30 12:32:42 2019 GMT Summer Time</td></tr></table>"
+       "<table><tr><th>Software</th><th>Version</th></tr><tr><td>Python</td><td>3.7.3 64bit [MSC v.1900 64 bit (AMD64)]</td></tr><tr><td>IPython</td><td>7.5.0</td></tr><tr><td>OS</td><td>Windows 10 10.0.17763 SP0</td></tr><tr><td>numpy</td><td>1.16.3</td></tr><tr><td>pandas</td><td>0.24.2</td></tr><tr><td colspan='2'>Thu May 30 14:51:14 2019 GMT Summer Time</td></tr></table>"
       ],
       "text/latex": [
        "\\begin{tabular}{|l|l|}\\hline\n",
@@ -51,7 +51,7 @@
        "OS & Windows 10 10.0.17763 SP0 \\\\ \\hline\n",
        "numpy & 1.16.3 \\\\ \\hline\n",
        "pandas & 0.24.2 \\\\ \\hline\n",
-       "\\hline \\multicolumn{2}{|l|}{Thu May 30 12:32:42 2019 GMT Summer Time} \\\\ \\hline\n",
+       "\\hline \\multicolumn{2}{|l|}{Thu May 30 14:51:14 2019 GMT Summer Time} \\\\ \\hline\n",
        "\\end{tabular}\n"
       ],
       "text/plain": [
@@ -61,10 +61,10 @@
        "OS Windows 10 10.0.17763 SP0\n",
        "numpy 1.16.3\n",
        "pandas 0.24.2\n",
-       "Thu May 30 12:32:42 2019 GMT Summer Time"
+       "Thu May 30 14:51:14 2019 GMT Summer Time"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,9 +83,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<!-- PELICAN_BEGIN_SUMMARY -->\n",
+    "\n",
     "In the first part of this project, we downloaded and generated data sets from the Steam Store API and SteamSpy API. We now need to take this raw data and prepare it in a process commonly referred to as [data cleaning](https://en.wikipedia.org/wiki/Data_cleansing).\n",
     "\n",
     "Currently the downloaded data is not in a very useful state. Many of the columns contain lengthy strings or missing values, which hinder analysis and are especially crippling to any machine learning techniques we may wish to implement. Data cleaning involves handling missing values, tidying up values, and ensuring data is neatly and consistently formatted.\n",
+    "\n",
+    "<!-- PELICAN_END_SUMMARY -->\n",
     "\n",
     "Data cleaning is often cited as being the lengthiest part of any project. As such, it will be broken up across a series of posts starting with this one. We will begin by taking care of the columns in the steam data that are easiest to deal with and outlining a framework for the process. Of course it could all be done in one go and a lot more concisely, however we'll be stepping through all the reasons for each decision and building the process iteratively.\n",
     "\n",
@@ -6706,8 +6710,8 @@
        "{'ids': [2, 5], 'notes': 'This Game may contain content not appropriate for all ages, or may not be appropriate for viewing at work: Frequent Violence or Gore, General Mature Content'}        8\n",
        "{'ids': [2, 5], 'notes': 'Includes intense violence and blood.'}                                                                                                                                7\n",
        "{'ids': [1, 5], 'notes': 'Our game has erotic content - girls in it get undressed during the session.'}                                                                                         6\n",
-       "{'ids': [1, 3, 5], 'notes': None}                                                                                                                                                               5\n",
        "{'ids': [1, 5], 'notes': 'This Game may contain content not appropriate for all ages, or may not be appropriate for viewing at work: Nudity or Sexual Content, General Mature Content'}         5\n",
+       "{'ids': [1, 3, 5], 'notes': None}                                                                                                                                                               5\n",
        "Name: content_descriptors, dtype: int64"
       ]
      },
@@ -6909,7 +6913,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Export Partially Data\n",
+    "## Export Partially Clean Data\n",
     "\n",
     "As I said at the beginning, data cleaning is a lengthy process. Already this part is far longer than it probably should be, and there's still plenty more to do. In the next part we'll take care of most of the remaining columns, and we'll be exporting a bunch of data too.\n",
     "\n",
@@ -7246,6 +7250,52 @@
   {
    "cell_type": "code",
    "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "name                       0\n",
+       "steam_appid                0\n",
+       "required_age               0\n",
+       "detailed_description      14\n",
+       "about_the_game            14\n",
+       "short_description         14\n",
+       "header_image               0\n",
+       "website                 9487\n",
+       "pc_requirements            0\n",
+       "mac_requirements           0\n",
+       "linux_requirements         0\n",
+       "categories               509\n",
+       "genres                    37\n",
+       "screenshots                5\n",
+       "movies                  1762\n",
+       "achievements               0\n",
+       "release_date               0\n",
+       "support_info               0\n",
+       "background                 5\n",
+       "windows                    0\n",
+       "mac                        0\n",
+       "linux                      0\n",
+       "price                      0\n",
+       "english                    0\n",
+       "developer                  0\n",
+       "publisher                  0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "steam_data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
